:rotating_light: Applied CodeRabbit suggestion